# selenoid_presentation

./: README.org  browser_configs  docker-compose.yaml  lightning-talk.html  lightning-talk.org  multi.sh  multimulti.sh  pyproject.toml  shell.nix  simple-test.py
reveal/: index.html  index.org
