[tool.poetry]
name = "selenoid_presentation"
version = "0.1.0"
description = ""
authors = ["Tom Purl <tom@tompurl.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
